UGC-19352: fix issue that Carousel grouping not stretching image

--- a/widgets/styles/templates/expanded-tiles/_index.scss
+++ b/widgets/styles/templates/expanded-tiles/_index.scss
@@ -253,6 +253,17 @@ expanded-tiles:not(:empty) {
             align-items: center;
             justify-content: center;
             overflow: hidden;
+            height: 100%;
+            width: 100%;
+
+            .image {
+              height: 100%;
+              width: 100%;
+
+              img.image-element {
+                object-fit: cover;
+              }
+            }
 
             .carousel-grouping-img {
               min-width: 100%;
